Maquetado container. Avances en seleccion por rango

--- a/calendar-double/src/index.html
+++ b/calendar-double/src/index.html
@@ -10,7 +10,7 @@
   <body>
     <!-- <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component> -->
     <div>
-      <calendar-double></calendar-double>
+      <double-calendar-container></double-calendar-container>
     </div>
   </body>
 </html>
