Eventos renombrados. Bug de estilos max-content en firefox corregido

--- a/calendar-double/src/index.html
+++ b/calendar-double/src/index.html
@@ -7,10 +7,16 @@
     <script type="module" src="/build/calendar-double.esm.js"></script>
     <script nomodule src="/build/calendar-double.js"></script>
   </head>
+  <style>
+    * {
+      padding: 0;
+      margin: 0;
+      box-sizing: border-box;
+    }
+  </style>
   <body>
-    <!-- <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component> -->
-    <div>
+    <!-- <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component> -->    
       <calendar-input-selection></calendar-input-selection>
-    </div>
+    
   </body>
 </html>
