Custom Properties para variables CSS definidas y documentadas

--- a/calendar-double/src/index.html
+++ b/calendar-double/src/index.html
@@ -8,10 +8,25 @@
     <script nomodule src="/build/calendar-double.js"></script>
   </head>
   <style>
-    * {
-      padding: 0;
-      margin: 0;
-      box-sizing: border-box;
+    html {
+      --primary-color: #ffffff;
+      --secondary-color: #00bb91;
+      --tertiary-color: #000000;
+      --inactive-color: #00bb9163;
+      --backgroud-color: #2a224a;
+      --border-color: #7471a799;
+      --font-color: #10ff83;
+      --font-light: 'InterStateL', sans-serif;
+
+      --background: #1F1D1D;
+      --textColor1: #FFFFFF;
+      --textColor2: #B1D2F4;
+      --mainColor1: #00DBE4;
+      --mainColor2: #522EE6;
+      --secondaryColor1: #D76325;
+      --secondaryColor2: #FBD104;
+      --secondaryColor3: #0586FC;
+      --secondaryColor4: #D405D0;
     }
   </style>
   <body>
